--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:51:51 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:52:34 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -149,7 +149,7 @@ Not started</td>
       <td>Hideki Matsuyama -2
 +1 thru 1</td>
       <td>Will Zalatoris -1
-E thru 3</td>
+E thru 4</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -181,7 +181,7 @@ Not started</td>
       <td>Justin Thomas(W) -2
 -1 thru 5</td>
       <td>Will Zalatoris -1
-E thru 3</td>
+E thru 4</td>
       <td class="greyout leftborder">Patrick Cantlay +3
 +2 thru 7</td>
       <td class="greyout">Tony Finau +5
@@ -197,7 +197,7 @@ Not started</td>
       <td>Corey Conners -2
 -1 thru 2</td>
       <td>Will Zalatoris -1
-E thru 3</td>
+E thru 4</td>
       <td class="greyout leftborder">Russell Henley +6
 +3 thru 14</td>
       <td class="greyout">Brooks Koepka
@@ -229,7 +229,7 @@ Not started</td>
       <td>Corey Conners -2
 -1 thru 2</td>
       <td>Will Zalatoris -1
-E thru 3</td>
+E thru 4</td>
       <td class="greyout leftborder">Viktor Hovland +3
 -1 (F)</td>
       <td class="greyout">Xander Schauffele(W)
@@ -243,7 +243,7 @@ Not started</td>
       <td>Corey Conners -2
 -1 thru 2</td>
       <td>Will Zalatoris -1
-E thru 3</td>
+E thru 4</td>
       <td>Webb Simpson E
 -1 thru 7</td>
       <td class="greyout leftborder">Jon Rahm(W) +4
@@ -323,7 +323,7 @@ Not started</td>
       <td>Corey Conners -2
 -1 thru 2</td>
       <td>Will Zalatoris -1
-E thru 3</td>
+E thru 4</td>
       <td>Jon Rahm +4
 +2 thru 10</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -356,27 +356,11 @@ Not started</td>
 -1 thru 2</td>
       <td>Justin Thomas(W) -2
 -1 thru 5</td>
-      <td>Matthew Fitzpatrick -1
--1 thru 6</td>
-      <td class="greyout leftborder">Will Zalatoris -1
-E thru 3</td>
+      <td>Will Zalatoris -1
+E thru 4</td>
+      <td class="greyout leftborder">Matthew Fitzpatrick +1
++1 thru 7</td>
       <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">The Dub</td>
-      <td class="bigbold">-9</td>
-      <td>Scottie Scheffler -8
-Not started</td>
-      <td>Cameron Smith(W) -3
--1 thru 2</td>
-      <td>Matthew Fitzpatrick -1
--1 thru 6</td>
-      <td>Patrick Cantlay +3
-+2 thru 7</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -394,6 +378,22 @@ E thru 11</td>
 +2 thru 8</td>
       <td class="greyout">Jon Rahm +4
 +2 thru 10</td>
+    </tr>
+    <tr>
+      <td class="bigbold">The Dub</td>
+      <td class="bigbold">-7</td>
+      <td>Scottie Scheffler -8
+Not started</td>
+      <td>Cameron Smith(W) -3
+-1 thru 2</td>
+      <td>Matthew Fitzpatrick +1
++1 thru 7</td>
+      <td>Patrick Cantlay +3
++2 thru 7</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Ron Harrington</td>
@@ -515,7 +515,7 @@ Missed Cut</td>
       <td>Corey Conners -2
 -1 thru 2</td>
       <td>Will Zalatoris -1
-E thru 3</td>
+E thru 4</td>
       <td>Patrick Cantlay +3
 +2 thru 7</td>
       <td class="greyout leftborder">Viktor Hovland +3
@@ -531,7 +531,7 @@ E thru 3</td>
       <td>Justin Thomas(W) -2
 -1 thru 5</td>
       <td>Will Zalatoris -1
-E thru 3</td>
+E thru 4</td>
       <td>Patrick Cantlay +3
 +2 thru 7</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -547,7 +547,7 @@ Missed Cut</td>
       <td>Justin Thomas -2
 -1 thru 5</td>
       <td>Will Zalatoris -1
-E thru 3</td>
+E thru 4</td>
       <td>Rory McIlroy +2
 E thru 11</td>
       <td class="greyout leftborder">Tiger Woods(W) +3
@@ -563,7 +563,7 @@ E thru 11</td>
       <td>Corey Conners -2
 -1 thru 2</td>
       <td>Will Zalatoris -1
-E thru 3</td>
+E thru 4</td>
       <td>Rory McIlroy +2
 E thru 11</td>
       <td class="greyout leftborder">Jon Rahm +4
@@ -579,26 +579,10 @@ Missed Cut</td>
       <td>Corey Conners(W) -2
 -1 thru 2</td>
       <td>Will Zalatoris -1
-E thru 3</td>
+E thru 4</td>
       <td>Jon Rahm +4
 +2 thru 10</td>
       <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">-2</td>
-      <td>Dustin Johnson(W) -3
--1 thru 2</td>
-      <td>Shane Lowry -3
-Not started</td>
-      <td>Matthew Fitzpatrick -1
--1 thru 6</td>
-      <td>Tony Finau +5
-+3 thru 13</td>
-      <td class="greyout leftborder">Louis Oosthuizen
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
@@ -627,12 +611,28 @@ Missed Cut</td>
       <td>Collin Morikawa -2
 -1 thru 3</td>
       <td>Will Zalatoris -1
-E thru 3</td>
+E thru 4</td>
       <td>Rory McIlroy +2
 E thru 11</td>
       <td class="greyout leftborder">Viktor Hovland +3
 -1 (F)</td>
       <td class="greyout">Xander Schauffele(W)
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">0</td>
+      <td>Dustin Johnson(W) -3
+-1 thru 2</td>
+      <td>Shane Lowry -3
+Not started</td>
+      <td>Matthew Fitzpatrick +1
++1 thru 7</td>
+      <td>Tony Finau +5
++3 thru 13</td>
+      <td class="greyout leftborder">Louis Oosthuizen
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -705,7 +705,7 @@ Missed Cut</td>
       <td>Collin Morikawa -2
 -1 thru 3</td>
       <td>Will Zalatoris -1
-E thru 3</td>
+E thru 4</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
       <td>Patrick Cantlay +3
@@ -753,7 +753,7 @@ Missed Cut</td>
       <td>Justin Thomas(W) -2
 -1 thru 5</td>
       <td>Will Zalatoris -1
-E thru 3</td>
+E thru 4</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Jon Rahm +4
@@ -775,7 +775,7 @@ Missed Cut</td>
       <td>Jon Rahm +4
 +2 thru 10</td>
       <td class="greyout leftborder">Daniel Berger +5
-+3 thru 12</td>
++3 thru 13</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -785,7 +785,7 @@ Missed Cut</td>
       <td>Justin Thomas -2
 -1 thru 5</td>
       <td>Will Zalatoris -1
-E thru 3</td>
+E thru 4</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Jon Rahm(W) +4
@@ -871,7 +871,7 @@ Missed Cut</td>
       <td>Jon Rahm +4
 +2 thru 10</td>
       <td class="greyout leftborder">Daniel Berger +5
-+3 thru 12</td>
++3 thru 13</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
