--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:51:51 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:52:34 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -149,7 +149,7 @@ Not started</td>
       <td>Justin Thomas(W) -2
 -1 thru 5</td>
       <td>Will Zalatoris -1
-E thru 3</td>
+E thru 4</td>
       <td class="greyout leftborder">Patrick Cantlay +3
 +2 thru 7</td>
       <td class="greyout">Tony Finau +5
@@ -163,7 +163,7 @@ Not started</td>
       <td>Shane Lowry -3
 Not started</td>
       <td>Will Zalatoris -1
-E thru 3</td>
+E thru 4</td>
       <td>Jon Rahm +4
 +2 thru 10</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -180,10 +180,10 @@ Not started</td>
 -1 thru 2</td>
       <td>Justin Thomas(W) -2
 -1 thru 5</td>
-      <td>Matthew Fitzpatrick -1
--1 thru 6</td>
-      <td class="greyout leftborder">Will Zalatoris -1
-E thru 3</td>
+      <td>Will Zalatoris -1
+E thru 4</td>
+      <td class="greyout leftborder">Matthew Fitzpatrick +1
++1 thru 7</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -259,11 +259,11 @@ Missed Cut</td>
       <td>Collin Morikawa -2
 -1 thru 3</td>
       <td>Will Zalatoris -1
-E thru 3</td>
+E thru 4</td>
       <td>Tony Finau +5
 +3 thru 13</td>
       <td class="greyout leftborder">Daniel Berger +5
-+3 thru 12</td>
++3 thru 13</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -311,7 +311,7 @@ Missed Cut</td>
       <td>Robert MacIntyre +4
 +2 thru 8</td>
       <td class="greyout leftborder">Daniel Berger +5
-+3 thru 12</td>
++3 thru 13</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
