--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:52:34 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:53:17 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -161,11 +161,11 @@ Missed Cut</td>
       <td>Scottie Scheffler -8
 Not started</td>
       <td>Shane Lowry -3
-Not started</td>
+E thru 1</td>
       <td>Justin Thomas(W) -2
 -1 thru 5</td>
       <td>Corey Conners -2
--1 thru 2</td>
+-1 thru 3</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -177,7 +177,7 @@ Missed Cut</td>
       <td>Scottie Scheffler -8
 Not started</td>
       <td>Shane Lowry -3
-Not started</td>
+E thru 1</td>
       <td>Justin Thomas(W) -2
 -1 thru 5</td>
       <td>Will Zalatoris -1
@@ -195,7 +195,7 @@ Not started</td>
       <td>Cameron Smith(W) -3
 -1 thru 2</td>
       <td>Corey Conners -2
--1 thru 2</td>
+-1 thru 3</td>
       <td>Will Zalatoris -1
 E thru 4</td>
       <td class="greyout leftborder">Russell Henley +6
@@ -211,9 +211,9 @@ Not started</td>
       <td>Cameron Smith(W) -3
 -1 thru 2</td>
       <td>Corey Conners -2
--1 thru 2</td>
+-1 thru 3</td>
       <td>Talor Gooch +1
--1 thru 12</td>
+-1 thru 13</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -227,7 +227,7 @@ Not started</td>
       <td>Cameron Smith -3
 -1 thru 2</td>
       <td>Corey Conners -2
--1 thru 2</td>
+-1 thru 3</td>
       <td>Will Zalatoris -1
 E thru 4</td>
       <td class="greyout leftborder">Viktor Hovland +3
@@ -241,7 +241,7 @@ Missed Cut</td>
       <td>Scottie Scheffler -8
 Not started</td>
       <td>Corey Conners -2
--1 thru 2</td>
+-1 thru 3</td>
       <td>Will Zalatoris -1
 E thru 4</td>
       <td>Webb Simpson E
@@ -259,7 +259,7 @@ Not started</td>
       <td>Cameron Smith(W) -3
 -1 thru 2</td>
       <td>Shane Lowry -3
-Not started</td>
+E thru 1</td>
       <td>Patrick Cantlay +3
 +2 thru 7</td>
       <td class="greyout leftborder">Viktor Hovland +3
@@ -273,11 +273,11 @@ Missed Cut</td>
       <td>Dustin Johnson(W) -3
 -1 thru 2</td>
       <td>Shane Lowry -3
-Not started</td>
+E thru 1</td>
       <td>Cameron Smith -3
 -1 thru 2</td>
       <td>Corey Conners -2
--1 thru 2</td>
+-1 thru 3</td>
       <td class="greyout leftborder">Patrick Cantlay +3
 +2 thru 7</td>
       <td class="greyout">Louis Oosthuizen
@@ -291,7 +291,7 @@ Not started</td>
       <td>Cameron Smith -3
 -1 thru 2</td>
       <td>Corey Conners -2
--1 thru 2</td>
+-1 thru 3</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
       <td class="greyout leftborder">Tyrrell Hatton +4
@@ -305,9 +305,9 @@ Missed Cut</td>
       <td>Cameron Smith(W) -3
 -1 thru 2</td>
       <td>Shane Lowry -3
-Not started</td>
+E thru 1</td>
       <td>Corey Conners -2
--1 thru 2</td>
+-1 thru 3</td>
       <td>Hideki Matsuyama -2
 +1 thru 1</td>
       <td class="greyout leftborder">Viktor Hovland +3
@@ -321,7 +321,7 @@ Not started</td>
       <td>Scottie Scheffler(W) -8
 Not started</td>
       <td>Corey Conners -2
--1 thru 2</td>
+-1 thru 3</td>
       <td>Will Zalatoris -1
 E thru 4</td>
       <td>Jon Rahm +4
@@ -337,7 +337,7 @@ Missed Cut</td>
       <td>Cameron Smith(W) -3
 -1 thru 2</td>
       <td>Corey Conners -2
--1 thru 2</td>
+-1 thru 3</td>
       <td>Hideki Matsuyama -2
 +1 thru 1</td>
       <td>Justin Thomas -2
@@ -351,7 +351,7 @@ Missed Cut</td>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-9</td>
       <td>Shane Lowry -3
-Not started</td>
+E thru 1</td>
       <td>Cameron Smith -3
 -1 thru 2</td>
       <td>Justin Thomas(W) -2
@@ -369,7 +369,7 @@ Missed Cut</td>
       <td>Scottie Scheffler(W) -8
 Not started</td>
       <td>Corey Conners -2
--1 thru 2</td>
+-1 thru 3</td>
       <td>Rory McIlroy +2
 E thru 11</td>
       <td>Patrick Cantlay +3
@@ -401,11 +401,11 @@ Missed Cut</td>
       <td>Cameron Smith -3
 -1 thru 2</td>
       <td>Corey Conners -2
--1 thru 2</td>
+-1 thru 3</td>
       <td>Hideki Matsuyama -2
 +1 thru 1</td>
       <td>Talor Gooch +1
--1 thru 12</td>
+-1 thru 13</td>
       <td class="greyout leftborder">Jon Rahm(W) +4
 +2 thru 10</td>
       <td class="greyout">Brooks Koepka
@@ -431,7 +431,7 @@ Missed Cut</td>
       <td class="bigbold">Baggy Pants</td>
       <td class="bigbold">-5</td>
       <td>Shane Lowry -3
-Not started</td>
+E thru 1</td>
       <td>Cameron Smith -3
 -1 thru 2</td>
       <td>Justin Thomas(W) -2
@@ -465,7 +465,7 @@ Missed Cut</td>
       <td>Scottie Scheffler -8
 Not started</td>
       <td>Corey Conners -2
--1 thru 2</td>
+-1 thru 3</td>
       <td>Patrick Cantlay(W) +3
 +2 thru 7</td>
       <td>Viktor Hovland +3
@@ -481,7 +481,7 @@ Missed Cut</td>
       <td>Cameron Smith(W) -3
 -1 thru 2</td>
       <td>Corey Conners -2
--1 thru 2</td>
+-1 thru 3</td>
       <td>Justin Thomas -2
 -1 thru 5</td>
       <td>Viktor Hovland +3
@@ -513,7 +513,7 @@ Missed Cut</td>
       <td>Cameron Smith -3
 -1 thru 2</td>
       <td>Corey Conners -2
--1 thru 2</td>
+-1 thru 3</td>
       <td>Will Zalatoris -1
 E thru 4</td>
       <td>Patrick Cantlay +3
@@ -561,7 +561,7 @@ E thru 11</td>
       <td>Justin Thomas(W) -2
 -1 thru 5</td>
       <td>Corey Conners -2
--1 thru 2</td>
+-1 thru 3</td>
       <td>Will Zalatoris -1
 E thru 4</td>
       <td>Rory McIlroy +2
@@ -577,7 +577,7 @@ Missed Cut</td>
       <td>Cameron Smith -3
 -1 thru 2</td>
       <td>Corey Conners(W) -2
--1 thru 2</td>
+-1 thru 3</td>
       <td>Will Zalatoris -1
 E thru 4</td>
       <td>Jon Rahm +4
@@ -591,9 +591,9 @@ Missed Cut</td>
       <td class="bigbold">Low Golf IQ</td>
       <td class="bigbold">-2</td>
       <td>Shane Lowry(W) -3
-Not started</td>
+E thru 1</td>
       <td>Corey Conners -2
--1 thru 2</td>
+-1 thru 3</td>
       <td>Joaquin Niemann E
 +1 thru 4</td>
       <td>Viktor Hovland +3
@@ -607,7 +607,7 @@ Missed Cut</td>
       <td class="bigbold">Grace</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners -2
--1 thru 2</td>
+-1 thru 3</td>
       <td>Collin Morikawa -2
 -1 thru 3</td>
       <td>Will Zalatoris -1
@@ -625,7 +625,7 @@ Missed Cut</td>
       <td>Dustin Johnson(W) -3
 -1 thru 2</td>
       <td>Shane Lowry -3
-Not started</td>
+E thru 1</td>
       <td>Matthew Fitzpatrick +1
 +1 thru 7</td>
       <td>Tony Finau +5
@@ -673,7 +673,7 @@ Missed Cut</td>
       <td>Cameron Smith -3
 -1 thru 2</td>
       <td>Corey Conners -2
--1 thru 2</td>
+-1 thru 3</td>
       <td>Tiger Woods +3
 +2 thru 8</td>
       <td>Jon Rahm(W) +4
@@ -687,7 +687,7 @@ Missed Cut</td>
       <td class="bigbold">Brian McDonald</td>
       <td class="bigbold">2</td>
       <td>Corey Conners -2
--1 thru 2</td>
+-1 thru 3</td>
       <td>Justin Thomas -2
 -1 thru 5</td>
       <td>Rory McIlroy +2
@@ -767,7 +767,7 @@ Missed Cut</td>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">4</td>
       <td>Corey Conners(W) -2
--1 thru 2</td>
+-1 thru 3</td>
       <td>Collin Morikawa -2
 -1 thru 3</td>
       <td>Robert MacIntyre +4
