--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:52:34 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:53:17 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -145,7 +145,7 @@ body {
       <td>Scottie Scheffler -8
 Not started</td>
       <td>Shane Lowry -3
-Not started</td>
+E thru 1</td>
       <td>Justin Thomas(W) -2
 -1 thru 5</td>
       <td>Will Zalatoris -1
@@ -161,7 +161,7 @@ E thru 4</td>
       <td>Scottie Scheffler(W) -8
 Not started</td>
       <td>Shane Lowry -3
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris -1
 E thru 4</td>
       <td>Jon Rahm +4
@@ -175,7 +175,7 @@ Missed Cut</td>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-9</td>
       <td>Shane Lowry -3
-Not started</td>
+E thru 1</td>
       <td>Cameron Smith -3
 -1 thru 2</td>
       <td>Justin Thomas(W) -2
@@ -207,11 +207,11 @@ E thru 11</td>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">-4</td>
       <td>Shane Lowry -3
-Not started</td>
+E thru 1</td>
       <td>Justin Thomas(W) -2
 -1 thru 5</td>
       <td>Corey Conners -2
--1 thru 2</td>
+-1 thru 3</td>
       <td>Patrick Cantlay +3
 +2 thru 7</td>
       <td class="greyout leftborder">Jon Rahm +4
@@ -241,7 +241,7 @@ Missed Cut</td>
       <td>Cameron Smith(W) -3
 -1 thru 2</td>
       <td>Corey Conners -2
--1 thru 2</td>
+-1 thru 3</td>
       <td>Justin Thomas -2
 -1 thru 5</td>
       <td>Viktor Hovland +3
@@ -291,7 +291,7 @@ Missed Cut</td>
       <td>Justin Thomas -2
 -1 thru 5</td>
       <td>Corey Conners -2
--1 thru 2</td>
+-1 thru 3</td>
       <td>Russell Henley +6
 +3 thru 14</td>
       <td class="greyout leftborder">Xander Schauffele(W)
@@ -303,7 +303,7 @@ Missed Cut</td>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">4</td>
       <td>Corey Conners(W) -2
--1 thru 2</td>
+-1 thru 3</td>
       <td>Collin Morikawa -2
 -1 thru 3</td>
       <td>Jon Rahm +4
