--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:00:28 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:01:12 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -183,7 +183,7 @@ E thru 1</td>
       <td>Will Zalatoris -1
 E thru 4</td>
       <td class="greyout leftborder">Patrick Cantlay +3
-+2 thru 7</td>
++2 thru 8</td>
       <td class="greyout">Tony Finau +5
 +3 thru 14</td>
     </tr>
@@ -261,7 +261,7 @@ E thru 1</td>
       <td>Cameron Smith(W) -2
 E thru 3</td>
       <td>Patrick Cantlay +3
-+2 thru 7</td>
++2 thru 8</td>
       <td class="greyout leftborder">Viktor Hovland +3
 -1 (F)</td>
       <td class="greyout">Brooks Koepka
@@ -279,7 +279,7 @@ E thru 1</td>
       <td>Cameron Smith -2
 E thru 3</td>
       <td class="greyout leftborder">Patrick Cantlay +3
-+2 thru 7</td>
++2 thru 8</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
@@ -373,7 +373,7 @@ Not started</td>
       <td>Rory McIlroy +2
 E thru 11</td>
       <td>Patrick Cantlay +3
-+2 thru 7</td>
++2 thru 8</td>
       <td class="greyout leftborder">Robert MacIntyre +4
 +2 thru 9</td>
       <td class="greyout">Jon Rahm +4
@@ -389,7 +389,7 @@ E thru 3</td>
       <td>Matthew Fitzpatrick +1
 +1 thru 7</td>
       <td>Patrick Cantlay +3
-+2 thru 7</td>
++2 thru 8</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -405,7 +405,7 @@ Not started</td>
       <td>Rory McIlroy +2
 E thru 11</td>
       <td>Patrick Cantlay +3
-+2 thru 7</td>
++2 thru 8</td>
       <td class="greyout leftborder">Viktor Hovland +3
 -1 (F)</td>
       <td class="greyout">Xander Schauffele
@@ -435,7 +435,7 @@ Not started</td>
       <td>Corey Conners -2
 -1 thru 3</td>
       <td>Patrick Cantlay(W) +3
-+2 thru 7</td>
++2 thru 8</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td class="greyout leftborder">Jon Rahm +4
@@ -453,7 +453,7 @@ E thru 1</td>
       <td>Cameron Smith -2
 E thru 3</td>
       <td>Patrick Cantlay +3
-+2 thru 7</td>
++2 thru 8</td>
       <td class="greyout leftborder">Viktor Hovland +3
 -1 (F)</td>
       <td class="greyout">Brooks Koepka
@@ -517,7 +517,7 @@ E thru 3</td>
       <td>Will Zalatoris -1
 E thru 4</td>
       <td>Patrick Cantlay +3
-+2 thru 7</td>
++2 thru 8</td>
       <td class="greyout leftborder">Viktor Hovland +3
 -1 (F)</td>
       <td class="greyout">Jon Rahm(W) +4
@@ -533,7 +533,7 @@ E thru 3</td>
       <td>Will Zalatoris -1
 E thru 4</td>
       <td>Patrick Cantlay +3
-+2 thru 7</td>
++2 thru 8</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -563,28 +563,12 @@ Not started</td>
       <td>Cameron Smith -2
 E thru 3</td>
       <td>Patrick Cantlay +3
-+2 thru 7</td>
++2 thru 8</td>
       <td>Billy Horschel +7
 +4 thru 16</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Low Golf IQ</td>
-      <td class="bigbold">-2</td>
-      <td>Shane Lowry(W) -3
-E thru 1</td>
-      <td>Corey Conners -2
--1 thru 3</td>
-      <td>Joaquin Niemann E
-+1 thru 4</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Brian Harman
 Missed Cut</td>
     </tr>
     <tr>
@@ -601,6 +585,22 @@ E thru 4</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">-1</td>
+      <td>Shane Lowry(W) -3
+E thru 1</td>
+      <td>Corey Conners -2
+-1 thru 3</td>
+      <td>Joaquin Niemann +1
++2 thru 5</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Brian Harman
 Missed Cut</td>
     </tr>
     <tr>
@@ -707,7 +707,7 @@ Missed Cut</td>
       <td>Justin Thomas -2
 -1 thru 6</td>
       <td>Patrick Cantlay +3
-+2 thru 7</td>
++2 thru 8</td>
       <td>Jon Rahm(W) +4
 +2 thru 10</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -725,7 +725,7 @@ E thru 4</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
       <td>Patrick Cantlay +3
-+2 thru 7</td>
++2 thru 8</td>
       <td class="greyout leftborder">Jon Rahm +4
 +2 thru 10</td>
       <td class="greyout">Xander Schauffele
@@ -739,7 +739,7 @@ Missed Cut</td>
       <td>Collin Morikawa(W) -1
 E thru 4</td>
       <td>Patrick Cantlay +3
-+2 thru 7</td>
++2 thru 8</td>
       <td>Jon Rahm +4
 +2 thru 10</td>
       <td class="greyout leftborder">Paul Casey
@@ -787,7 +787,7 @@ Missed Cut</td>
       <td>Rory McIlroy(W) +2
 E thru 11</td>
       <td>Patrick Cantlay +3
-+2 thru 7</td>
++2 thru 8</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td class="greyout leftborder">Jon Rahm +4
@@ -819,7 +819,7 @@ Not started</td>
       <td>Dustin Johnson -3
 -1 thru 2</td>
       <td>Patrick Cantlay +3
-+2 thru 7</td>
++2 thru 8</td>
       <td>Adam Scott +12
 +8 (F)</td>
       <td class="greyout leftborder">Brooks Koepka(W)
@@ -835,7 +835,7 @@ Missed Cut</td>
       <td>Rory McIlroy +2
 E thru 11</td>
       <td>Patrick Cantlay(W) +3
-+2 thru 7</td>
++2 thru 8</td>
       <td>Jon Rahm +4
 +2 thru 10</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -865,7 +865,7 @@ Missed Cut</td>
       <td>Justin Thomas(W) -2
 -1 thru 6</td>
       <td>Patrick Cantlay +3
-+2 thru 7</td>
++2 thru 8</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Jon Rahm +4
@@ -897,7 +897,7 @@ Missed Cut</td>
       <td>Dustin Johnson -3
 -1 thru 2</td>
       <td>Patrick Cantlay +3
-+2 thru 7</td>
++2 thru 8</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Jon Rahm +4
@@ -913,7 +913,7 @@ Missed Cut</td>
       <td>Collin Morikawa -1
 E thru 4</td>
       <td>Patrick Cantlay +3
-+2 thru 7</td>
++2 thru 8</td>
       <td>Jon Rahm(W) +4
 +2 thru 10</td>
       <td>Tony Finau +5
