--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:00:28 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:01:12 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -151,7 +151,7 @@ E thru 1</td>
       <td>Will Zalatoris -1
 E thru 4</td>
       <td class="greyout leftborder">Patrick Cantlay +3
-+2 thru 7</td>
++2 thru 8</td>
       <td class="greyout">Tony Finau +5
 +3 thru 14</td>
     </tr>
@@ -197,7 +197,7 @@ E thru 1</td>
       <td>Corey Conners -2
 -1 thru 3</td>
       <td>Patrick Cantlay +3
-+2 thru 7</td>
++2 thru 8</td>
       <td class="greyout leftborder">Jon Rahm +4
 +2 thru 10</td>
       <td class="greyout">Tyrrell Hatton +4
@@ -205,15 +205,15 @@ E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-4</td>
+      <td class="bigbold">-3</td>
       <td>Justin Thomas -2
 -1 thru 6</td>
       <td>Cameron Smith -2
 E thru 3</td>
       <td>Tommy Fleetwood(W) E
 -3 thru 16</td>
-      <td>Joaquin Niemann E
-+1 thru 4</td>
+      <td>Joaquin Niemann +1
++2 thru 5</td>
       <td class="greyout leftborder">Rory McIlroy +2
 E thru 11</td>
       <td class="greyout">Viktor Hovland +3
@@ -247,7 +247,7 @@ E thru 4</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +3
-+2 thru 7</td>
++2 thru 8</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -293,7 +293,7 @@ E thru 4</td>
       <td>Rory McIlroy +2
 E thru 11</td>
       <td>Patrick Cantlay +3
-+2 thru 7</td>
++2 thru 8</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -337,7 +337,7 @@ Missed Cut</td>
       <td>Dustin Johnson -3
 -1 thru 2</td>
       <td>Patrick Cantlay +3
-+2 thru 7</td>
++2 thru 8</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Jon Rahm +4
@@ -353,7 +353,7 @@ Missed Cut</td>
       <td>Collin Morikawa -1
 E thru 4</td>
       <td>Patrick Cantlay +3
-+2 thru 7</td>
++2 thru 8</td>
       <td>Jon Rahm(W) +4
 +2 thru 10</td>
       <td>Tony Finau +5
