--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:01:12 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:01:56 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -143,7 +143,7 @@ body {
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-14</td>
       <td>Scottie Scheffler -8
-Not started</td>
+E thru 1</td>
       <td>Shane Lowry -3
 E thru 1</td>
       <td>Justin Thomas(W) -2
@@ -159,7 +159,7 @@ E thru 4</td>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">-10</td>
       <td>Scottie Scheffler(W) -8
-Not started</td>
+E thru 1</td>
       <td>Shane Lowry -3
 E thru 1</td>
       <td>Will Zalatoris -1
@@ -204,22 +204,6 @@ E thru 1</td>
 +2 thru 10</td>
     </tr>
     <tr>
-      <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-3</td>
-      <td>Justin Thomas -2
--1 thru 6</td>
-      <td>Cameron Smith -2
-E thru 3</td>
-      <td>Tommy Fleetwood(W) E
--3 thru 16</td>
-      <td>Joaquin Niemann +1
-+2 thru 5</td>
-      <td class="greyout leftborder">Rory McIlroy +2
-E thru 11</td>
-      <td class="greyout">Viktor Hovland +3
--1 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-3</td>
       <td>Cameron Smith(W) -2
@@ -234,6 +218,22 @@ E thru 3</td>
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">-2</td>
+      <td>Justin Thomas -2
+-1 thru 6</td>
+      <td>Cameron Smith -2
+E thru 3</td>
+      <td>Tommy Fleetwood(W) +1
+-2 thru 17</td>
+      <td>Joaquin Niemann +1
++2 thru 5</td>
+      <td class="greyout leftborder">Rory McIlroy +2
+E thru 11</td>
+      <td class="greyout">Viktor Hovland +3
+-1 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
@@ -255,13 +255,13 @@ Missed Cut</td>
       <td class="bigbold">Jamie Watters</td>
       <td class="bigbold">1</td>
       <td>Dustin Johnson -3
--1 thru 2</td>
+-1 thru 3</td>
       <td>Justin Thomas -2
 -1 thru 6</td>
       <td>Corey Conners -2
 -1 thru 3</td>
       <td>Russell Henley +6
-+3 thru 14</td>
++3 thru 15</td>
       <td class="greyout leftborder">Xander Schauffele(W)
 Missed Cut</td>
       <td class="greyout">Louis Oosthuizen
@@ -323,7 +323,7 @@ E thru 4</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
       <td>Patrick Reed +3
-E thru 14</td>
+E thru 15</td>
       <td>Jon Rahm +4
 +2 thru 10</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -335,7 +335,7 @@ Missed Cut</td>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">9</td>
       <td>Dustin Johnson -3
--1 thru 2</td>
+-1 thru 3</td>
       <td>Patrick Cantlay +3
 +2 thru 8</td>
       <td>Viktor Hovland +3
