--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:01:56 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:02:39 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -165,7 +165,7 @@ E thru 1</td>
       <td>Justin Thomas(W) -2
 -1 thru 6</td>
       <td>Corey Conners -2
--1 thru 3</td>
+-1 thru 4</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -195,7 +195,7 @@ E thru 1</td>
       <td>Cameron Smith(W) -2
 E thru 3</td>
       <td>Corey Conners -2
--1 thru 3</td>
+-1 thru 4</td>
       <td>Will Zalatoris -1
 E thru 4</td>
       <td class="greyout leftborder">Russell Henley +6
@@ -209,7 +209,7 @@ Missed Cut</td>
       <td>Scottie Scheffler -8
 E thru 1</td>
       <td>Corey Conners -2
--1 thru 3</td>
+-1 thru 4</td>
       <td>Will Zalatoris -1
 E thru 4</td>
       <td>Webb Simpson E
@@ -227,7 +227,7 @@ E thru 1</td>
       <td>Cameron Smith(W) -2
 E thru 3</td>
       <td>Corey Conners -2
--1 thru 3</td>
+-1 thru 4</td>
       <td>Talor Gooch +1
 -1 thru 13</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -241,7 +241,7 @@ Missed Cut</td>
       <td>Scottie Scheffler -8
 E thru 1</td>
       <td>Corey Conners -2
--1 thru 3</td>
+-1 thru 4</td>
       <td>Cameron Smith -2
 E thru 3</td>
       <td>Will Zalatoris -1
@@ -275,7 +275,7 @@ Missed Cut</td>
       <td>Shane Lowry -3
 E thru 1</td>
       <td>Corey Conners -2
--1 thru 3</td>
+-1 thru 4</td>
       <td>Cameron Smith -2
 E thru 3</td>
       <td class="greyout leftborder">Patrick Cantlay +3
@@ -289,7 +289,7 @@ Missed Cut</td>
       <td>Scottie Scheffler -8
 E thru 1</td>
       <td>Corey Conners -2
--1 thru 3</td>
+-1 thru 4</td>
       <td>Cameron Smith -2
 E thru 3</td>
       <td>Viktor Hovland(W) +3
@@ -305,7 +305,7 @@ Missed Cut</td>
       <td>Scottie Scheffler(W) -8
 E thru 1</td>
       <td>Corey Conners -2
--1 thru 3</td>
+-1 thru 4</td>
       <td>Will Zalatoris -1
 E thru 4</td>
       <td>Jon Rahm +4
@@ -323,7 +323,7 @@ E thru 1</td>
       <td>Cameron Smith(W) -2
 E thru 3</td>
       <td>Corey Conners -2
--1 thru 3</td>
+-1 thru 4</td>
       <td>Hideki Matsuyama -2
 +1 thru 2</td>
       <td class="greyout leftborder">Viktor Hovland +3
@@ -337,7 +337,7 @@ E thru 3</td>
       <td>Cameron Smith(W) -2
 E thru 3</td>
       <td>Corey Conners -2
--1 thru 3</td>
+-1 thru 4</td>
       <td>Hideki Matsuyama -2
 +1 thru 2</td>
       <td>Justin Thomas -2
@@ -365,15 +365,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
-      <td class="bigbold">-7</td>
+      <td class="bigbold">-6</td>
       <td>Scottie Scheffler(W) -8
 E thru 1</td>
       <td>Corey Conners -2
--1 thru 3</td>
-      <td>Rory McIlroy +2
-E thru 11</td>
+-1 thru 4</td>
       <td>Patrick Cantlay +3
 +2 thru 8</td>
+      <td>Rory McIlroy +3
++1 thru 12</td>
       <td class="greyout leftborder">Robert MacIntyre +4
 +2 thru 9</td>
       <td class="greyout">Jon Rahm +4
@@ -396,26 +396,10 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">-5</td>
-      <td>Scottie Scheffler -8
-E thru 1</td>
-      <td>Justin Thomas(W) -2
--1 thru 6</td>
-      <td>Rory McIlroy +2
-E thru 11</td>
-      <td>Patrick Cantlay +3
-+2 thru 8</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Ron Harrington</td>
       <td class="bigbold">-5</td>
       <td>Corey Conners -2
--1 thru 3</td>
+-1 thru 4</td>
       <td>Hideki Matsuyama -2
 +1 thru 2</td>
       <td>Cameron Smith -2
@@ -428,12 +412,28 @@ E thru 3</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">-4</td>
+      <td>Scottie Scheffler -8
+E thru 1</td>
+      <td>Justin Thomas(W) -2
+-1 thru 6</td>
+      <td>Patrick Cantlay +3
++2 thru 8</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout leftborder">Rory McIlroy +3
++1 thru 12</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Lyle Rattray</td>
       <td class="bigbold">-4</td>
       <td>Scottie Scheffler -8
 E thru 1</td>
       <td>Corey Conners -2
--1 thru 3</td>
+-1 thru 4</td>
       <td>Patrick Cantlay(W) +3
 +2 thru 8</td>
       <td>Viktor Hovland +3
@@ -460,28 +460,12 @@ E thru 3</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">-4</td>
-      <td>Hideki Matsuyama -2
-+1 thru 2</td>
-      <td>Cameron Smith -2
-E thru 3</td>
-      <td>Justin Thomas -2
--1 thru 6</td>
-      <td>Rory McIlroy(W) +2
-E thru 11</td>
-      <td class="greyout leftborder">Tiger Woods +3
-+2 thru 8</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-3</td>
       <td>Cameron Smith(W) -2
 E thru 3</td>
       <td>Corey Conners -2
--1 thru 3</td>
+-1 thru 4</td>
       <td>Justin Thomas -2
 -1 thru 6</td>
       <td>Viktor Hovland +3
@@ -492,26 +476,26 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jabby</td>
+      <td class="bigbold">Jack Fleck</td>
       <td class="bigbold">-3</td>
-      <td>Justin Thomas(W) -2
+      <td>Hideki Matsuyama -2
++1 thru 2</td>
+      <td>Cameron Smith -2
+E thru 3</td>
+      <td>Justin Thomas -2
 -1 thru 6</td>
-      <td>Corey Conners -2
--1 thru 3</td>
-      <td>Will Zalatoris -1
-E thru 4</td>
-      <td>Rory McIlroy +2
-E thru 11</td>
-      <td class="greyout leftborder">Jon Rahm +4
-+2 thru 10</td>
-      <td class="greyout">Brooks Koepka
+      <td>Rory McIlroy(W) +3
++1 thru 12</td>
+      <td class="greyout leftborder">Tiger Woods +3
++2 thru 8</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
       <td class="bigbold">-2</td>
       <td>Corey Conners -2
--1 thru 3</td>
+-1 thru 4</td>
       <td>Cameron Smith -2
 E thru 3</td>
       <td>Will Zalatoris -1
@@ -540,22 +524,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">-2</td>
-      <td>Justin Thomas -2
--1 thru 6</td>
-      <td>Collin Morikawa -1
-E thru 4</td>
-      <td>Will Zalatoris -1
-E thru 4</td>
-      <td>Rory McIlroy +2
-E thru 11</td>
-      <td class="greyout leftborder">Tiger Woods(W) +3
-+2 thru 8</td>
-      <td class="greyout">Viktor Hovland +3
--1 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Uphill into the Wind</td>
       <td class="bigbold">-2</td>
       <td>Scottie Scheffler(W) -8
@@ -572,10 +540,26 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Jabby</td>
+      <td class="bigbold">-2</td>
+      <td>Justin Thomas(W) -2
+-1 thru 6</td>
+      <td>Corey Conners -2
+-1 thru 4</td>
+      <td>Will Zalatoris -1
+E thru 4</td>
+      <td>Rory McIlroy +3
++1 thru 12</td>
+      <td class="greyout leftborder">Jon Rahm +4
++2 thru 10</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Santorini Sunrises</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners(W) -2
--1 thru 3</td>
+-1 thru 4</td>
       <td>Cameron Smith -2
 E thru 3</td>
       <td>Will Zalatoris -1
@@ -588,12 +572,28 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">-1</td>
+      <td>Justin Thomas -2
+-1 thru 6</td>
+      <td>Collin Morikawa -1
+E thru 4</td>
+      <td>Will Zalatoris -1
+E thru 4</td>
+      <td>Tiger Woods(W) +3
++2 thru 8</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout">Rory McIlroy +3
++1 thru 12</td>
+    </tr>
+    <tr>
       <td class="bigbold">Low Golf IQ</td>
       <td class="bigbold">-1</td>
       <td>Shane Lowry(W) -3
 E thru 1</td>
       <td>Corey Conners -2
--1 thru 3</td>
+-1 thru 4</td>
       <td>Joaquin Niemann +1
 +2 thru 5</td>
       <td>Viktor Hovland +3
@@ -601,22 +601,6 @@ E thru 1</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Brian Harman
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Grace</td>
-      <td class="bigbold">0</td>
-      <td>Corey Conners -2
--1 thru 3</td>
-      <td>Collin Morikawa -1
-E thru 4</td>
-      <td>Will Zalatoris -1
-E thru 4</td>
-      <td>Rory McIlroy +2
-E thru 11</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
     </tr>
     <tr>
@@ -636,14 +620,30 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Fred Jamieson</td>
+      <td class="bigbold">Grace</td>
       <td class="bigbold">1</td>
-      <td>Scottie Scheffler -8
-E thru 1</td>
-      <td>Rory McIlroy +2
-E thru 11</td>
+      <td>Corey Conners -2
+-1 thru 4</td>
+      <td>Collin Morikawa -1
+E thru 4</td>
+      <td>Will Zalatoris -1
+E thru 4</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
+      <td class="greyout leftborder">Rory McIlroy +3
++1 thru 12</td>
+      <td class="greyout">Xander Schauffele(W)
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Fred Jamieson</td>
+      <td class="bigbold">2</td>
+      <td>Scottie Scheffler -8
+E thru 1</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td>Rory McIlroy +3
++1 thru 12</td>
       <td>Jon Rahm(W) +4
 +2 thru 10</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -652,42 +652,10 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">2</td>
-      <td>Justin Thomas -2
--1 thru 6</td>
-      <td>Collin Morikawa(W) -1
-E thru 4</td>
-      <td>Rory McIlroy +2
-E thru 11</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout leftborder">Tiger Woods +3
-+2 thru 8</td>
-      <td class="greyout">Gary Woodland
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Brian McDonald</td>
-      <td class="bigbold">2</td>
-      <td>Corey Conners -2
--1 thru 3</td>
-      <td>Justin Thomas -2
--1 thru 6</td>
-      <td>Rory McIlroy +2
-E thru 11</td>
-      <td>Jon Rahm(W) +4
-+2 thru 10</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Don Shaw</td>
       <td class="bigbold">3</td>
       <td>Corey Conners -2
--1 thru 3</td>
+-1 thru 4</td>
       <td>Cameron Smith -2
 E thru 3</td>
       <td>Tiger Woods +3
@@ -711,6 +679,38 @@ Missed Cut</td>
       <td>Jon Rahm(W) +4
 +2 thru 10</td>
       <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">3</td>
+      <td>Justin Thomas -2
+-1 thru 6</td>
+      <td>Collin Morikawa(W) -1
+E thru 4</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td>Rory McIlroy +3
++1 thru 12</td>
+      <td class="greyout leftborder">Tiger Woods +3
++2 thru 8</td>
+      <td class="greyout">Gary Woodland
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">3</td>
+      <td>Corey Conners -2
+-1 thru 4</td>
+      <td>Justin Thomas -2
+-1 thru 6</td>
+      <td>Rory McIlroy +3
++1 thru 12</td>
+      <td>Jon Rahm(W) +4
++2 thru 10</td>
+      <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
@@ -780,26 +780,10 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">5</td>
-      <td>Dustin Johnson -3
--1 thru 3</td>
-      <td>Rory McIlroy(W) +2
-E thru 11</td>
-      <td>Patrick Cantlay +3
-+2 thru 8</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout leftborder">Jon Rahm +4
-+2 thru 10</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">5</td>
       <td>Corey Conners(W) -2
--1 thru 3</td>
+-1 thru 4</td>
       <td>Collin Morikawa -1
 E thru 4</td>
       <td>Robert MacIntyre +4
@@ -808,6 +792,22 @@ E thru 4</td>
 +2 thru 10</td>
       <td class="greyout leftborder">Daniel Berger +5
 +3 thru 13</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Lorette Hosegood</td>
+      <td class="bigbold">6</td>
+      <td>Dustin Johnson -3
+-1 thru 3</td>
+      <td>Rory McIlroy(W) +3
++1 thru 12</td>
+      <td>Patrick Cantlay +3
++2 thru 8</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout leftborder">Jon Rahm +4
++2 thru 10</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -828,38 +828,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">7</td>
-      <td>Justin Thomas -2
--1 thru 6</td>
-      <td>Rory McIlroy +2
-E thru 11</td>
-      <td>Patrick Cantlay(W) +3
-+2 thru 8</td>
-      <td>Jon Rahm +4
-+2 thru 10</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">7</td>
-      <td>Cameron Smith -2
-E thru 3</td>
-      <td>Rory McIlroy +2
-E thru 11</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td>Jon Rahm(W) +4
-+2 thru 10</td>
-      <td class="greyout leftborder">Bubba Watson +6
-+4 thru 9</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">8</td>
       <td>Justin Thomas(W) -2
@@ -873,6 +841,38 @@ Missed Cut</td>
       <td class="greyout leftborder">Daniel Berger +5
 +3 thru 13</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Hasbulla</td>
+      <td class="bigbold">8</td>
+      <td>Justin Thomas -2
+-1 thru 6</td>
+      <td>Patrick Cantlay(W) +3
++2 thru 8</td>
+      <td>Rory McIlroy +3
++1 thru 12</td>
+      <td>Jon Rahm +4
++2 thru 10</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Glitter Girl</td>
+      <td class="bigbold">8</td>
+      <td>Cameron Smith -2
+E thru 3</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td>Rory McIlroy +3
++1 thru 12</td>
+      <td>Jon Rahm(W) +4
++2 thru 10</td>
+      <td class="greyout leftborder">Bubba Watson +6
++4 thru 9</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
