--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:01:56 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:02:39 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -195,7 +195,7 @@ E thru 1</td>
       <td>Justin Thomas(W) -2
 -1 thru 6</td>
       <td>Corey Conners -2
--1 thru 3</td>
+-1 thru 4</td>
       <td>Patrick Cantlay +3
 +2 thru 8</td>
       <td class="greyout leftborder">Jon Rahm +4
@@ -209,7 +209,7 @@ E thru 1</td>
       <td>Cameron Smith(W) -2
 E thru 3</td>
       <td>Corey Conners -2
--1 thru 3</td>
+-1 thru 4</td>
       <td>Justin Thomas -2
 -1 thru 6</td>
       <td>Viktor Hovland +3
@@ -230,10 +230,10 @@ E thru 3</td>
 -2 thru 17</td>
       <td>Joaquin Niemann +1
 +2 thru 5</td>
-      <td class="greyout leftborder">Rory McIlroy +2
-E thru 11</td>
-      <td class="greyout">Viktor Hovland +3
+      <td class="greyout leftborder">Viktor Hovland +3
 -1 (F)</td>
+      <td class="greyout">Rory McIlroy +3
++1 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
@@ -259,7 +259,7 @@ Missed Cut</td>
       <td>Justin Thomas -2
 -1 thru 6</td>
       <td>Corey Conners -2
--1 thru 3</td>
+-1 thru 4</td>
       <td>Russell Henley +6
 +3 thru 15</td>
       <td class="greyout leftborder">Xander Schauffele(W)
@@ -285,13 +285,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">3</td>
       <td>Cameron Smith(W) -2
 E thru 3</td>
       <td>Collin Morikawa -1
 E thru 4</td>
-      <td>Rory McIlroy +2
-E thru 11</td>
+      <td>Rory McIlroy +3
++1 thru 12</td>
       <td>Patrick Cantlay +3
 +2 thru 8</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -303,7 +303,7 @@ Missed Cut</td>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">5</td>
       <td>Corey Conners(W) -2
--1 thru 3</td>
+-1 thru 4</td>
       <td>Collin Morikawa -1
 E thru 4</td>
       <td>Jon Rahm +4
