--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:10:32 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:11:15 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -237,33 +237,17 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">0</td>
       <td>Justin Thomas -2
 -1 thru 6</td>
-      <td>Collin Morikawa -1
-E thru 4</td>
       <td>Sungjae Im -1
-+2 thru 1</td>
++2 thru 2</td>
+      <td>Collin Morikawa E
++1 thru 5</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +3
 +2 thru 8</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">0</td>
-      <td>Justin Thomas(W) -2
--1 thru 6</td>
-      <td>Will Zalatoris -2
--1 thru 5</td>
-      <td>Collin Morikawa -1
-E thru 4</td>
-      <td>Tony Finau +5
-+3 thru 14</td>
-      <td class="greyout leftborder">Daniel Berger +5
-+3 thru 14</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -284,12 +268,28 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">1</td>
+      <td>Justin Thomas(W) -2
+-1 thru 6</td>
+      <td>Will Zalatoris -2
+-1 thru 5</td>
+      <td>Collin Morikawa E
++1 thru 5</td>
+      <td>Tony Finau +5
++3 thru 14</td>
+      <td class="greyout leftborder">Daniel Berger +5
++3 thru 14</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">John Nixon</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">4</td>
       <td>Cameron Smith(W) -2
 E thru 4</td>
-      <td>Collin Morikawa -1
-E thru 4</td>
+      <td>Collin Morikawa E
++1 thru 5</td>
       <td>Rory McIlroy +3
 +1 thru 12</td>
       <td>Patrick Cantlay +3
@@ -301,11 +301,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">6</td>
       <td>Corey Conners(W) -2
 -1 thru 4</td>
-      <td>Collin Morikawa -1
-E thru 4</td>
+      <td>Collin Morikawa E
++1 thru 5</td>
       <td>Jon Rahm +4
 +2 thru 11</td>
       <td>Robert MacIntyre +4
@@ -333,9 +333,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">10</td>
-      <td>Collin Morikawa -1
-E thru 4</td>
+      <td class="bigbold">11</td>
+      <td>Collin Morikawa E
++1 thru 5</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
       <td>Jon Rahm +4
@@ -349,9 +349,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">11</td>
-      <td>Collin Morikawa -1
-E thru 4</td>
+      <td class="bigbold">12</td>
+      <td>Collin Morikawa E
++1 thru 5</td>
       <td>Patrick Cantlay +3
 +2 thru 8</td>
       <td>Jon Rahm(W) +4
