--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:10:32 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:11:15 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -556,22 +556,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">-2</td>
-      <td>Justin Thomas -2
--1 thru 6</td>
-      <td>Will Zalatoris -2
--1 thru 5</td>
-      <td>Collin Morikawa -1
-E thru 4</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout leftborder">Rory McIlroy +3
-+1 thru 12</td>
-      <td class="greyout">Tiger Woods(W) +4
-+3 thru 9</td>
-    </tr>
-    <tr>
       <td class="bigbold">Low Golf IQ</td>
       <td class="bigbold">-2</td>
       <td>Shane Lowry(W) -3
@@ -586,6 +570,22 @@ E thru 1</td>
 Missed Cut</td>
       <td class="greyout">Brian Harman
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">-1</td>
+      <td>Justin Thomas -2
+-1 thru 6</td>
+      <td>Will Zalatoris -2
+-1 thru 5</td>
+      <td>Collin Morikawa E
++1 thru 5</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout leftborder">Rory McIlroy +3
++1 thru 12</td>
+      <td class="greyout">Tiger Woods(W) +4
++3 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Uphill into the Wind</td>
@@ -621,13 +621,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Grace</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">1</td>
       <td>Corey Conners -2
 -1 thru 4</td>
       <td>Will Zalatoris -2
 -1 thru 5</td>
-      <td>Collin Morikawa -1
-E thru 4</td>
+      <td>Collin Morikawa E
++1 thru 5</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td class="greyout leftborder">Rory McIlroy +3
@@ -648,22 +648,6 @@ E thru 1</td>
 +2 thru 11</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Walk 1</td>
-      <td class="bigbold">3</td>
-      <td>Will Zalatoris -2
--1 thru 5</td>
-      <td>Collin Morikawa -1
-E thru 4</td>
-      <td>Viktor Hovland(W) +3
--1 (F)</td>
-      <td>Patrick Cantlay +3
-+2 thru 8</td>
-      <td class="greyout leftborder">Jon Rahm +4
-+2 thru 11</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -700,22 +684,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">3</td>
-      <td>Justin Thomas -2
--1 thru 6</td>
-      <td>Collin Morikawa(W) -1
-E thru 4</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td>Rory McIlroy +3
-+1 thru 12</td>
-      <td class="greyout leftborder">Tiger Woods +4
-+3 thru 9</td>
-      <td class="greyout">Gary Woodland
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Brian McDonald</td>
       <td class="bigbold">3</td>
       <td>Corey Conners -2
@@ -748,6 +716,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Walk 1</td>
+      <td class="bigbold">4</td>
+      <td>Will Zalatoris -2
+-1 thru 5</td>
+      <td>Collin Morikawa E
++1 thru 5</td>
+      <td>Viktor Hovland(W) +3
+-1 (F)</td>
+      <td>Patrick Cantlay +3
++2 thru 8</td>
+      <td class="greyout leftborder">Jon Rahm +4
++2 thru 11</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Don Shaw</td>
       <td class="bigbold">4</td>
       <td>Corey Conners -2
@@ -764,34 +748,34 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Hosegood</td>
+      <td class="bigbold">Downhill Down Wind</td>
       <td class="bigbold">4</td>
+      <td>Justin Thomas -2
+-1 thru 6</td>
+      <td>Collin Morikawa(W) E
++1 thru 5</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td>Rory McIlroy +3
++1 thru 12</td>
+      <td class="greyout leftborder">Tiger Woods +4
++3 thru 9</td>
+      <td class="greyout">Gary Woodland
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Hosegood</td>
+      <td class="bigbold">5</td>
       <td>Hideki Matsuyama -2
 +1 thru 2</td>
-      <td>Collin Morikawa(W) -1
-E thru 4</td>
+      <td>Collin Morikawa(W) E
++1 thru 5</td>
       <td>Patrick Cantlay +3
 +2 thru 8</td>
       <td>Jon Rahm +4
 +2 thru 11</td>
       <td class="greyout leftborder">Paul Casey
 Out With Injury</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">5</td>
-      <td>Corey Conners(W) -2
--1 thru 4</td>
-      <td>Collin Morikawa -1
-E thru 4</td>
-      <td>Robert MacIntyre +4
-+2 thru 9</td>
-      <td>Jon Rahm +4
-+2 thru 11</td>
-      <td class="greyout leftborder">Daniel Berger +5
-+3 thru 14</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -825,6 +809,22 @@ E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka(W)
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">6</td>
+      <td>Corey Conners(W) -2
+-1 thru 4</td>
+      <td>Collin Morikawa E
++1 thru 5</td>
+      <td>Robert MacIntyre +4
++2 thru 9</td>
+      <td>Jon Rahm +4
++2 thru 11</td>
+      <td class="greyout leftborder">Daniel Berger +5
++3 thru 14</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -893,9 +893,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">10</td>
-      <td>Collin Morikawa -1
-E thru 4</td>
+      <td class="bigbold">11</td>
+      <td>Collin Morikawa E
++1 thru 5</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
       <td>Jon Rahm +4
@@ -909,9 +909,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">11</td>
-      <td>Collin Morikawa -1
-E thru 4</td>
+      <td class="bigbold">12</td>
+      <td>Collin Morikawa E
++1 thru 5</td>
       <td>Patrick Cantlay +3
 +2 thru 8</td>
       <td>Jon Rahm(W) +4
