--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:19:51 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:20:34 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -179,7 +179,7 @@ E thru 1</td>
       <td>Hideki Matsuyama -2
 +1 thru 3</td>
       <td>Cameron Smith -2
-E thru 4</td>
+E thru 5</td>
       <td>Will Zalatoris -1
 E thru 6</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -193,7 +193,7 @@ Missed Cut</td>
       <td>Scottie Scheffler -8
 E thru 1</td>
       <td>Cameron Smith(W) -2
-E thru 4</td>
+E thru 5</td>
       <td>Corey Conners -2
 -1 thru 4</td>
       <td>Will Zalatoris -1
@@ -225,7 +225,7 @@ Missed Cut</td>
       <td>Scottie Scheffler -8
 E thru 1</td>
       <td>Cameron Smith(W) -2
-E thru 4</td>
+E thru 5</td>
       <td>Corey Conners -2
 -1 thru 4</td>
       <td>Talor Gooch +1
@@ -243,7 +243,7 @@ E thru 1</td>
       <td>Shane Lowry -4
 -1 thru 2</td>
       <td>Cameron Smith(W) -2
-E thru 4</td>
+E thru 5</td>
       <td>Patrick Cantlay +3
 +2 thru 9</td>
       <td class="greyout leftborder">Viktor Hovland +3
@@ -259,7 +259,7 @@ E thru 1</td>
       <td>Corey Conners -2
 -1 thru 4</td>
       <td>Cameron Smith -2
-E thru 4</td>
+E thru 5</td>
       <td>Will Zalatoris -1
 E thru 6</td>
       <td class="greyout leftborder">Viktor Hovland +3
@@ -277,7 +277,7 @@ Missed Cut</td>
       <td>Corey Conners -2
 -1 thru 4</td>
       <td>Cameron Smith -2
-E thru 4</td>
+E thru 5</td>
       <td class="greyout leftborder">Patrick Cantlay +3
 +2 thru 9</td>
       <td class="greyout">Louis Oosthuizen
@@ -289,7 +289,7 @@ Missed Cut</td>
       <td>Shane Lowry -4
 -1 thru 2</td>
       <td>Cameron Smith(W) -2
-E thru 4</td>
+E thru 5</td>
       <td>Corey Conners -2
 -1 thru 4</td>
       <td>Hideki Matsuyama -2
@@ -307,7 +307,7 @@ E thru 1</td>
       <td>Corey Conners -2
 -1 thru 4</td>
       <td>Cameron Smith -2
-E thru 4</td>
+E thru 5</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
       <td class="greyout leftborder">Tyrrell Hatton +4
@@ -339,7 +339,7 @@ Missed Cut</td>
       <td>Justin Thomas(W) -2
 -1 thru 7</td>
       <td>Cameron Smith -2
-E thru 4</td>
+E thru 5</td>
       <td>Will Zalatoris -1
 E thru 6</td>
       <td class="greyout leftborder">Matthew Fitzpatrick E
@@ -351,7 +351,7 @@ Missed Cut</td>
       <td class="bigbold">Bill Hunter</td>
       <td class="bigbold">-8</td>
       <td>Cameron Smith(W) -2
-E thru 4</td>
+E thru 5</td>
       <td>Corey Conners -2
 -1 thru 4</td>
       <td>Hideki Matsuyama -2
@@ -385,7 +385,7 @@ E thru 13</td>
       <td>Scottie Scheffler -8
 E thru 1</td>
       <td>Cameron Smith(W) -2
-E thru 4</td>
+E thru 5</td>
       <td>Matthew Fitzpatrick E
 E thru 8</td>
       <td>Patrick Cantlay +3
@@ -419,7 +419,7 @@ Missed Cut</td>
       <td>Hideki Matsuyama -2
 +1 thru 3</td>
       <td>Cameron Smith -2
-E thru 4</td>
+E thru 5</td>
       <td>Talor Gooch +1
 -1 thru 14</td>
       <td class="greyout leftborder">Jon Rahm(W) +4
@@ -435,7 +435,7 @@ Missed Cut</td>
       <td>Justin Thomas(W) -2
 -1 thru 7</td>
       <td>Cameron Smith -2
-E thru 4</td>
+E thru 5</td>
       <td>Patrick Cantlay +3
 +2 thru 9</td>
       <td class="greyout leftborder">Viktor Hovland +3
@@ -465,7 +465,7 @@ Missed Cut</td>
       <td>Hideki Matsuyama -2
 +1 thru 3</td>
       <td>Cameron Smith -2
-E thru 4</td>
+E thru 5</td>
       <td>Justin Thomas -2
 -1 thru 7</td>
       <td>Rory McIlroy(W) +2
@@ -479,7 +479,7 @@ Missed Cut</td>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-3</td>
       <td>Cameron Smith(W) -2
-E thru 4</td>
+E thru 5</td>
       <td>Corey Conners -2
 -1 thru 4</td>
       <td>Justin Thomas -2
@@ -529,7 +529,7 @@ Missed Cut</td>
       <td>Corey Conners -2
 -1 thru 4</td>
       <td>Cameron Smith -2
-E thru 4</td>
+E thru 5</td>
       <td>Will Zalatoris -1
 E thru 6</td>
       <td>Patrick Cantlay +3
@@ -545,7 +545,7 @@ E thru 6</td>
       <td>Justin Thomas(W) -2
 -1 thru 7</td>
       <td>Cameron Smith -2
-E thru 4</td>
+E thru 5</td>
       <td>Will Zalatoris -1
 E thru 6</td>
       <td>Patrick Cantlay +3
@@ -554,6 +554,22 @@ E thru 6</td>
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">-2</td>
+      <td>Justin Thomas -2
+-1 thru 7</td>
+      <td>Collin Morikawa -1
+E thru 6</td>
+      <td>Will Zalatoris -1
+E thru 6</td>
+      <td>Rory McIlroy +2
+E thru 13</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout">Tiger Woods(W) +4
++3 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
@@ -577,7 +593,7 @@ Missed Cut</td>
       <td>Corey Conners(W) -2
 -1 thru 4</td>
       <td>Cameron Smith -2
-E thru 4</td>
+E thru 5</td>
       <td>Will Zalatoris -1
 E thru 6</td>
       <td>Jon Rahm +4
@@ -588,28 +604,12 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">-1</td>
-      <td>Justin Thomas -2
--1 thru 7</td>
-      <td>Will Zalatoris -1
-E thru 6</td>
-      <td>Collin Morikawa E
-+1 thru 5</td>
-      <td>Rory McIlroy +2
-E thru 13</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout">Tiger Woods(W) +4
-+3 thru 10</td>
-    </tr>
-    <tr>
       <td class="bigbold">Uphill into the Wind</td>
       <td class="bigbold">-1</td>
       <td>Scottie Scheffler(W) -8
 E thru 1</td>
       <td>Cameron Smith -2
-E thru 4</td>
+E thru 5</td>
       <td>Patrick Cantlay +3
 +2 thru 9</td>
       <td>Billy Horschel +8
@@ -621,13 +621,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Grace</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">0</td>
       <td>Corey Conners -2
 -1 thru 4</td>
+      <td>Collin Morikawa -1
+E thru 6</td>
       <td>Will Zalatoris -1
 E thru 6</td>
-      <td>Collin Morikawa E
-+1 thru 5</td>
       <td>Rory McIlroy +2
 E thru 13</td>
       <td class="greyout leftborder">Viktor Hovland +3
@@ -649,6 +649,22 @@ E thru 13</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">2</td>
+      <td>Justin Thomas -2
+-1 thru 7</td>
+      <td>Collin Morikawa(W) -1
+E thru 6</td>
+      <td>Rory McIlroy +2
+E thru 13</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout leftborder">Tiger Woods +4
++3 thru 10</td>
+      <td class="greyout">Gary Woodland
 Missed Cut</td>
     </tr>
     <tr>
@@ -684,19 +700,19 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">3</td>
-      <td>Justin Thomas -2
--1 thru 7</td>
-      <td>Collin Morikawa(W) E
-+1 thru 5</td>
-      <td>Rory McIlroy +2
-E thru 13</td>
-      <td>Viktor Hovland +3
+      <td class="bigbold">Walk 1</td>
+      <td class="bigbold">4</td>
+      <td>Collin Morikawa -1
+E thru 6</td>
+      <td>Will Zalatoris -1
+E thru 6</td>
+      <td>Viktor Hovland(W) +3
 -1 (F)</td>
-      <td class="greyout leftborder">Tiger Woods +4
-+3 thru 10</td>
-      <td class="greyout">Gary Woodland
+      <td>Patrick Cantlay +3
++2 thru 9</td>
+      <td class="greyout leftborder">Jon Rahm +4
++2 thru 12</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -705,7 +721,7 @@ Missed Cut</td>
       <td>Corey Conners -2
 -1 thru 4</td>
       <td>Cameron Smith -2
-E thru 4</td>
+E thru 5</td>
       <td>Jon Rahm(W) +4
 +2 thru 12</td>
       <td>Tiger Woods +4
@@ -713,6 +729,22 @@ E thru 4</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Hosegood</td>
+      <td class="bigbold">4</td>
+      <td>Hideki Matsuyama -2
++1 thru 3</td>
+      <td>Collin Morikawa(W) -1
+E thru 6</td>
+      <td>Patrick Cantlay +3
++2 thru 9</td>
+      <td>Jon Rahm +4
++2 thru 12</td>
+      <td class="greyout leftborder">Paul Casey
+Out With Injury</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -748,22 +780,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Walk 1</td>
-      <td class="bigbold">5</td>
-      <td>Will Zalatoris -1
-E thru 6</td>
-      <td>Collin Morikawa E
-+1 thru 5</td>
-      <td>Viktor Hovland(W) +3
--1 (F)</td>
-      <td>Patrick Cantlay +3
-+2 thru 9</td>
-      <td class="greyout leftborder">Jon Rahm +4
-+2 thru 12</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Lorette Hosegood</td>
       <td class="bigbold">5</td>
       <td>Dustin Johnson -3
@@ -780,18 +796,18 @@ E thru 13</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Hosegood</td>
+      <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">5</td>
-      <td>Hideki Matsuyama -2
-+1 thru 3</td>
-      <td>Collin Morikawa(W) E
-+1 thru 5</td>
-      <td>Patrick Cantlay +3
-+2 thru 9</td>
+      <td>Corey Conners(W) -2
+-1 thru 4</td>
+      <td>Collin Morikawa -1
+E thru 6</td>
+      <td>Robert MacIntyre +4
++2 thru 10</td>
       <td>Jon Rahm +4
 +2 thru 12</td>
-      <td class="greyout leftborder">Paul Casey
-Out With Injury</td>
+      <td class="greyout leftborder">Daniel Berger +5
++3 thru 14</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -809,22 +825,6 @@ E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka(W)
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">6</td>
-      <td>Corey Conners(W) -2
--1 thru 4</td>
-      <td>Collin Morikawa E
-+1 thru 5</td>
-      <td>Robert MacIntyre +4
-+2 thru 10</td>
-      <td>Jon Rahm +4
-+2 thru 12</td>
-      <td class="greyout leftborder">Daniel Berger +5
-+3 thru 14</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -847,7 +847,7 @@ Missed Cut</td>
       <td class="bigbold">Glitter Girl</td>
       <td class="bigbold">7</td>
       <td>Cameron Smith -2
-E thru 4</td>
+E thru 5</td>
       <td>Rory McIlroy +2
 E thru 13</td>
       <td>Viktor Hovland +3
@@ -893,9 +893,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">11</td>
-      <td>Collin Morikawa E
-+1 thru 5</td>
+      <td class="bigbold">10</td>
+      <td>Collin Morikawa -1
+E thru 6</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
       <td>Jon Rahm +4
@@ -909,9 +909,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">12</td>
-      <td>Collin Morikawa E
-+1 thru 5</td>
+      <td class="bigbold">11</td>
+      <td>Collin Morikawa -1
+E thru 6</td>
       <td>Patrick Cantlay +3
 +2 thru 9</td>
       <td>Jon Rahm(W) +4
