--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:19:51 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:20:34 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -179,7 +179,7 @@ Missed Cut</td>
       <td>Justin Thomas(W) -2
 -1 thru 7</td>
       <td>Cameron Smith -2
-E thru 4</td>
+E thru 5</td>
       <td>Will Zalatoris -1
 E thru 6</td>
       <td class="greyout leftborder">Matthew Fitzpatrick E
@@ -209,7 +209,7 @@ Missed Cut</td>
       <td>Justin Thomas -2
 -1 thru 7</td>
       <td>Cameron Smith -2
-E thru 4</td>
+E thru 5</td>
       <td>Joaquin Niemann E
 +1 thru 6</td>
       <td>Tommy Fleetwood(W) +1
@@ -223,7 +223,7 @@ E thru 13</td>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-3</td>
       <td>Cameron Smith(W) -2
-E thru 4</td>
+E thru 5</td>
       <td>Corey Conners -2
 -1 thru 4</td>
       <td>Justin Thomas -2
@@ -237,13 +237,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">-1</td>
       <td>Justin Thomas -2
 -1 thru 7</td>
+      <td>Collin Morikawa -1
+E thru 6</td>
       <td>Sungjae Im -1
 +2 thru 2</td>
-      <td>Collin Morikawa E
-+1 thru 5</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +3
@@ -269,13 +269,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">1</td>
       <td>Justin Thomas(W) -2
 -1 thru 7</td>
+      <td>Collin Morikawa -1
+E thru 6</td>
       <td>Will Zalatoris -1
 E thru 6</td>
-      <td>Collin Morikawa E
-+1 thru 5</td>
       <td>Tony Finau +5
 +3 thru 15</td>
       <td class="greyout leftborder">Daniel Berger +5
@@ -285,11 +285,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">2</td>
       <td>Cameron Smith(W) -2
-E thru 4</td>
-      <td>Collin Morikawa E
-+1 thru 5</td>
+E thru 5</td>
+      <td>Collin Morikawa -1
+E thru 6</td>
       <td>Rory McIlroy +2
 E thru 13</td>
       <td>Patrick Cantlay +3
@@ -301,11 +301,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">5</td>
       <td>Corey Conners(W) -2
 -1 thru 4</td>
-      <td>Collin Morikawa E
-+1 thru 5</td>
+      <td>Collin Morikawa -1
+E thru 6</td>
       <td>Jon Rahm +4
 +2 thru 12</td>
       <td>Robert MacIntyre +4
@@ -333,9 +333,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">11</td>
-      <td>Collin Morikawa E
-+1 thru 5</td>
+      <td class="bigbold">10</td>
+      <td>Collin Morikawa -1
+E thru 6</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
       <td>Jon Rahm +4
@@ -349,9 +349,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">12</td>
-      <td>Collin Morikawa E
-+1 thru 5</td>
+      <td class="bigbold">11</td>
+      <td>Collin Morikawa -1
+E thru 6</td>
       <td>Patrick Cantlay +3
 +2 thru 9</td>
       <td>Jon Rahm(W) +4
