--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:25:35 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:26:18 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -153,7 +153,7 @@ E thru 6</td>
       <td class="greyout leftborder">Patrick Cantlay +3
 +2 thru 9</td>
       <td class="greyout">Tony Finau +5
-+3 thru 15</td>
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Doug Muir</td>
@@ -245,7 +245,7 @@ E thru 5</td>
       <td>Corey Conners -1
 E thru 5</td>
       <td>Talor Gooch +1
--1 thru 14</td>
+-1 thru 15</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -453,7 +453,7 @@ E thru 5</td>
       <td>Corey Conners -1
 E thru 5</td>
       <td>Talor Gooch +1
--1 thru 14</td>
+-1 thru 15</td>
       <td class="greyout leftborder">Jon Rahm(W) +4
 +2 thru 12</td>
       <td class="greyout">Brooks Koepka
@@ -563,7 +563,7 @@ Missed Cut</td>
       <td>Corey Conners -1
 E thru 5</td>
       <td>Joaquin Niemann E
-+1 thru 6</td>
++1 thru 7</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td class="greyout leftborder">Sam Burns
@@ -597,7 +597,7 @@ E thru 6</td>
       <td>Matthew Fitzpatrick +1
 +1 thru 9</td>
       <td>Tony Finau +5
-+3 thru 15</td>
++3 thru 16</td>
       <td class="greyout leftborder">Louis Oosthuizen
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -818,12 +818,12 @@ Missed Cut</td>
 E thru 5</td>
       <td>Collin Morikawa -1
 E thru 6</td>
+      <td>Daniel Berger +4
++2 thru 15</td>
       <td>Robert MacIntyre +4
 +2 thru 10</td>
-      <td>Jon Rahm +4
+      <td class="greyout leftborder">Jon Rahm +4
 +2 thru 12</td>
-      <td class="greyout leftborder">Daniel Berger +5
-+3 thru 14</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -868,10 +868,10 @@ Missed Cut</td>
 +2 thru 9</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td>Jon Rahm +4
+      <td>Daniel Berger +4
++2 thru 15</td>
+      <td class="greyout leftborder">Jon Rahm +4
 +2 thru 12</td>
-      <td class="greyout leftborder">Daniel Berger +5
-+3 thru 14</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -917,7 +917,7 @@ E thru 6</td>
       <td>Jon Rahm(W) +4
 +2 thru 12</td>
       <td>Tony Finau +5
-+3 thru 15</td>
++3 thru 16</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
