--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:25:35 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:26:18 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -153,7 +153,7 @@ E thru 6</td>
       <td class="greyout leftborder">Patrick Cantlay +3
 +2 thru 9</td>
       <td class="greyout">Tony Finau +5
-+3 thru 15</td>
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -211,7 +211,7 @@ E thru 5</td>
       <td>Cameron Smith -2
 E thru 5</td>
       <td>Joaquin Niemann E
-+1 thru 6</td>
++1 thru 7</td>
       <td>Tommy Fleetwood(W) +1
 -2 (F)</td>
       <td class="greyout leftborder">Rory McIlroy +2
@@ -253,17 +253,17 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">0</td>
       <td>Justin Thomas(W) -2
 -1 thru 7</td>
       <td>Collin Morikawa -1
 E thru 6</td>
       <td>Will Zalatoris -1
 E thru 6</td>
-      <td>Tony Finau +5
-+3 thru 15</td>
-      <td class="greyout leftborder">Daniel Berger +5
-+3 thru 14</td>
+      <td>Daniel Berger +4
++2 thru 15</td>
+      <td class="greyout leftborder">Tony Finau +5
++3 thru 16</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -308,10 +308,10 @@ E thru 5</td>
 E thru 6</td>
       <td>Jon Rahm +4
 +2 thru 12</td>
-      <td>Robert MacIntyre +4
+      <td>Daniel Berger +4
++2 thru 15</td>
+      <td class="greyout leftborder">Robert MacIntyre +4
 +2 thru 10</td>
-      <td class="greyout leftborder">Daniel Berger +5
-+3 thru 14</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -357,7 +357,7 @@ E thru 6</td>
       <td>Jon Rahm(W) +4
 +2 thru 12</td>
       <td>Tony Finau +5
-+3 thru 15</td>
++3 thru 16</td>
       <td class="greyout leftborder">Jordan Spieth
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
