--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:30:45 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:31:28 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -252,22 +252,6 @@ E thru 6</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Albert Selina</td>
-      <td class="bigbold">-11</td>
-      <td>Scottie Scheffler -9
--1 thru 2</td>
-      <td>Corey Conners -1
-E thru 6</td>
-      <td>Will Zalatoris -1
-E thru 6</td>
-      <td>Webb Simpson E
--1 thru 9</td>
-      <td class="greyout leftborder">Jon Rahm(W) +4
-+2 thru 12</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Tom Davis</td>
       <td class="bigbold">-11</td>
       <td>Shane Lowry -4
@@ -332,6 +316,22 @@ E thru 6</td>
 +2 thru 12</td>
     </tr>
     <tr>
+      <td class="bigbold">Albert Selina</td>
+      <td class="bigbold">-9</td>
+      <td>Scottie Scheffler -9
+-1 thru 2</td>
+      <td>Corey Conners -1
+E thru 6</td>
+      <td>Will Zalatoris -1
+E thru 6</td>
+      <td>Webb Simpson +2
++1 thru 10</td>
+      <td class="greyout leftborder">Jon Rahm(W) +4
++2 thru 12</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Matt Wilson</td>
       <td class="bigbold">-9</td>
       <td>Scottie Scheffler(W) -9
@@ -387,7 +387,7 @@ Missed Cut</td>
       <td>Justin Thomas(W) -2
 -1 thru 8</td>
       <td>Rory McIlroy +2
-E thru 13</td>
+E thru 14</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +4
@@ -403,7 +403,7 @@ Missed Cut</td>
       <td>Corey Conners -1
 E thru 6</td>
       <td>Rory McIlroy +2
-E thru 13</td>
+E thru 14</td>
       <td>Patrick Cantlay +4
 +3 thru 10</td>
       <td class="greyout leftborder">Robert MacIntyre +4
@@ -453,7 +453,7 @@ Missed Cut</td>
       <td>Justin Thomas -2
 -1 thru 8</td>
       <td>Rory McIlroy(W) +2
-E thru 13</td>
+E thru 14</td>
       <td class="greyout leftborder">Tiger Woods +4
 +3 thru 10</td>
       <td class="greyout">Xander Schauffele
@@ -533,7 +533,7 @@ E thru 6</td>
       <td>Will Zalatoris -1
 E thru 6</td>
       <td>Rory McIlroy +2
-E thru 13</td>
+E thru 14</td>
       <td class="greyout leftborder">Viktor Hovland +3
 -1 (F)</td>
       <td class="greyout">Tiger Woods(W) +4
@@ -549,7 +549,7 @@ E thru 6</td>
       <td>Will Zalatoris -1
 E thru 6</td>
       <td>Rory McIlroy +2
-E thru 13</td>
+E thru 14</td>
       <td class="greyout leftborder">Jon Rahm +4
 +2 thru 12</td>
       <td class="greyout">Brooks Koepka
@@ -625,7 +625,7 @@ Missed Cut</td>
       <td>Scottie Scheffler -9
 -1 thru 2</td>
       <td>Rory McIlroy +2
-E thru 13</td>
+E thru 14</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Jon Rahm(W) +4
@@ -645,7 +645,7 @@ E thru 6</td>
       <td>Will Zalatoris -1
 E thru 6</td>
       <td>Rory McIlroy +2
-E thru 13</td>
+E thru 14</td>
       <td class="greyout leftborder">Viktor Hovland +3
 -1 (F)</td>
       <td class="greyout">Xander Schauffele(W)
@@ -659,7 +659,7 @@ Missed Cut</td>
       <td>Collin Morikawa(W) -1
 E thru 6</td>
       <td>Rory McIlroy +2
-E thru 13</td>
+E thru 14</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td class="greyout leftborder">Tiger Woods +4
@@ -675,7 +675,7 @@ Missed Cut</td>
       <td>Corey Conners -1
 E thru 6</td>
       <td>Rory McIlroy +2
-E thru 13</td>
+E thru 14</td>
       <td>Jon Rahm(W) +4
 +2 thru 12</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -785,7 +785,7 @@ Missed Cut</td>
       <td>Dustin Johnson -3
 -1 thru 4</td>
       <td>Rory McIlroy(W) +2
-E thru 13</td>
+E thru 14</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Patrick Cantlay +4
@@ -833,7 +833,7 @@ Missed Cut</td>
       <td>Cameron Smith -3
 -1 thru 6</td>
       <td>Rory McIlroy +2
-E thru 13</td>
+E thru 14</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Jon Rahm(W) +4
@@ -849,7 +849,7 @@ Missed Cut</td>
       <td>Justin Thomas -2
 -1 thru 8</td>
       <td>Rory McIlroy +2
-E thru 13</td>
+E thru 14</td>
       <td>Patrick Cantlay(W) +4
 +3 thru 10</td>
       <td>Jon Rahm +4
