--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:37:12 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:37:55 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -152,8 +152,8 @@ body {
 +1 thru 7</td>
       <td class="greyout leftborder">Patrick Cantlay +4
 +3 thru 10</td>
-      <td class="greyout">Tony Finau +5
-+3 thru 16</td>
+      <td class="greyout">Tony Finau +4
++2 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -260,10 +260,10 @@ Missed Cut</td>
 +1 thru 7</td>
       <td>Will Zalatoris E
 +1 thru 7</td>
-      <td>Daniel Berger +4
+      <td>Tony Finau +4
++2 thru 17</td>
+      <td class="greyout leftborder">Daniel Berger +4
 +2 thru 15</td>
-      <td class="greyout leftborder">Tony Finau +5
-+3 thru 16</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -325,7 +325,7 @@ Missed Cut</td>
       <td>Jon Rahm +4
 +2 thru 13</td>
       <td>Patrick Reed +4
-+1 thru 17</td>
++1 (F)</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Luke List
@@ -349,15 +349,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">13</td>
+      <td class="bigbold">12</td>
       <td>Collin Morikawa E
 +1 thru 7</td>
       <td>Jon Rahm(W) +4
 +2 thru 13</td>
       <td>Patrick Cantlay +4
 +3 thru 10</td>
-      <td>Tony Finau +5
-+3 thru 16</td>
+      <td>Tony Finau +4
++2 thru 17</td>
       <td class="greyout leftborder">Jordan Spieth
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
