--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:40:47 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:41:30 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -409,7 +409,7 @@ E thru 14</td>
       <td class="greyout leftborder">Jon Rahm +4
 +2 thru 13</td>
       <td class="greyout">Robert MacIntyre +6
-+4 thru 11</td>
++4 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Baggy Pants</td>
@@ -828,22 +828,6 @@ E thru 14</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">7</td>
-      <td>Corey Conners(W) -1
-E thru 6</td>
-      <td>Collin Morikawa E
-+1 thru 7</td>
-      <td>Daniel Berger +4
-+2 thru 15</td>
-      <td>Jon Rahm +4
-+2 thru 13</td>
-      <td class="greyout leftborder">Robert MacIntyre +6
-+4 thru 11</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Hasbulla</td>
       <td class="bigbold">8</td>
       <td>Justin Thomas -2
@@ -866,13 +850,29 @@ Missed Cut</td>
 -1 thru 8</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td>Daniel Berger +4
-+2 thru 15</td>
       <td>Patrick Cantlay +4
 +3 thru 10</td>
-      <td class="greyout leftborder">Jon Rahm +4
+      <td>Jon Rahm +4
 +2 thru 13</td>
+      <td class="greyout leftborder">Daniel Berger +6
++4 thru 16</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">9</td>
+      <td>Corey Conners(W) -1
+E thru 6</td>
+      <td>Collin Morikawa E
++1 thru 7</td>
+      <td>Jon Rahm +4
++2 thru 13</td>
+      <td>Daniel Berger +6
++4 thru 16</td>
+      <td class="greyout leftborder">Robert MacIntyre +6
++4 thru 12</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
