--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:49:24 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:50:07 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -157,15 +157,15 @@ body {
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-11</td>
+      <td class="bigbold">-10</td>
       <td>Scottie Scheffler(W) -9
 -1 thru 4</td>
       <td>Shane Lowry -4
 -1 thru 4</td>
       <td>Will Zalatoris E
 +1 thru 7</td>
-      <td>Jon Rahm +4
-+2 thru 13</td>
+      <td>Jon Rahm +5
++3 thru 14</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -212,10 +212,10 @@ E thru 14</td>
 -1 thru 9</td>
       <td>Corey Conners -1
 E thru 7</td>
-      <td>Jon Rahm +4
-+2 thru 13</td>
-      <td class="greyout leftborder">Patrick Cantlay +4
+      <td>Patrick Cantlay +4
 +3 thru 10</td>
+      <td class="greyout leftborder">Jon Rahm +5
++3 thru 14</td>
       <td class="greyout">Tyrrell Hatton +7
 +5 thru 14</td>
     </tr>
@@ -301,13 +301,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">9</td>
+      <td class="bigbold">10</td>
       <td>Corey Conners(W) -1
 E thru 7</td>
       <td>Collin Morikawa E
 +1 thru 7</td>
-      <td>Jon Rahm +4
-+2 thru 13</td>
+      <td>Jon Rahm +5
++3 thru 14</td>
       <td>Daniel Berger +6
 +4 thru 16</td>
       <td class="greyout leftborder">Robert MacIntyre +6
@@ -317,15 +317,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">11</td>
+      <td class="bigbold">12</td>
       <td>Collin Morikawa E
 +1 thru 7</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
-      <td>Jon Rahm +4
-+2 thru 13</td>
       <td>Patrick Reed +4
 +1 (F)</td>
+      <td>Jon Rahm +5
++3 thru 14</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Luke List
@@ -333,15 +333,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">11</td>
+      <td class="bigbold">12</td>
       <td>Dustin Johnson -2
 E thru 6</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Patrick Cantlay +4
 +3 thru 10</td>
-      <td>Jon Rahm +4
-+2 thru 13</td>
+      <td>Jon Rahm +5
++3 thru 14</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
@@ -349,15 +349,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">12</td>
+      <td class="bigbold">13</td>
       <td>Collin Morikawa E
 +1 thru 7</td>
-      <td>Jon Rahm(W) +4
-+2 thru 13</td>
       <td>Patrick Cantlay +4
 +3 thru 10</td>
       <td>Tony Finau +4
 +2 thru 17</td>
+      <td>Jon Rahm(W) +5
++3 thru 14</td>
       <td class="greyout leftborder">Jordan Spieth
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
