--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:49:24 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:50:07 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -309,26 +309,10 @@ E thru 7</td>
       <td>Will Zalatoris E
 +1 thru 7</td>
       <td>Webb Simpson +2
-+1 thru 10</td>
-      <td class="greyout leftborder">Jon Rahm(W) +4
-+2 thru 13</td>
++1 thru 11</td>
+      <td class="greyout leftborder">Jon Rahm(W) +5
++3 thru 14</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Matt Wilson</td>
-      <td class="bigbold">-8</td>
-      <td>Scottie Scheffler(W) -9
--1 thru 4</td>
-      <td>Corey Conners -1
-E thru 7</td>
-      <td>Will Zalatoris E
-+1 thru 7</td>
-      <td>Jon Rahm +4
-+2 thru 13</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -344,8 +328,24 @@ E thru 7</td>
 +3 thru 5</td>
       <td class="greyout leftborder">Viktor Hovland +3
 -1 (F)</td>
-      <td class="greyout">Jon Rahm +4
-+2 thru 13</td>
+      <td class="greyout">Jon Rahm +5
++3 thru 14</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Wilson</td>
+      <td class="bigbold">-7</td>
+      <td>Scottie Scheffler(W) -9
+-1 thru 4</td>
+      <td>Corey Conners -1
+E thru 7</td>
+      <td>Will Zalatoris E
++1 thru 7</td>
+      <td>Jon Rahm +5
++3 thru 14</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
@@ -390,8 +390,8 @@ E thru 7</td>
 E thru 14</td>
       <td>Patrick Cantlay +4
 +3 thru 10</td>
-      <td class="greyout leftborder">Jon Rahm +4
-+2 thru 13</td>
+      <td class="greyout leftborder">Jon Rahm +5
++3 thru 14</td>
       <td class="greyout">Robert MacIntyre +6
 +4 thru 12</td>
     </tr>
@@ -438,8 +438,8 @@ E thru 7</td>
 -1 (F)</td>
       <td>Patrick Cantlay(W) +4
 +3 thru 10</td>
-      <td class="greyout leftborder">Jon Rahm +4
-+2 thru 13</td>
+      <td class="greyout leftborder">Jon Rahm +5
++3 thru 14</td>
       <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
@@ -470,8 +470,8 @@ E thru 7</td>
 +3 thru 5</td>
       <td>Talor Gooch +1
 -1 thru 16</td>
-      <td class="greyout leftborder">Jon Rahm(W) +4
-+2 thru 13</td>
+      <td class="greyout leftborder">Jon Rahm(W) +5
++3 thru 14</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -518,10 +518,10 @@ E thru 7</td>
 +1 thru 7</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td class="greyout leftborder">Jon Rahm(W) +4
-+2 thru 13</td>
-      <td class="greyout">Patrick Cantlay +4
+      <td class="greyout leftborder">Patrick Cantlay +4
 +3 thru 10</td>
+      <td class="greyout">Jon Rahm(W) +5
++3 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
@@ -550,8 +550,8 @@ E thru 7</td>
 +1 thru 7</td>
       <td>Rory McIlroy +2
 E thru 14</td>
-      <td class="greyout leftborder">Jon Rahm +4
-+2 thru 13</td>
+      <td class="greyout leftborder">Jon Rahm +5
++3 thru 14</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -567,22 +567,6 @@ E thru 6</td>
       <td>Tony Finau +4
 +2 thru 17</td>
       <td class="greyout leftborder">Louis Oosthuizen
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Santorini Sunrises</td>
-      <td class="bigbold">0</td>
-      <td>Cameron Smith -3
--1 thru 7</td>
-      <td>Corey Conners(W) -1
-E thru 7</td>
-      <td>Will Zalatoris E
-+1 thru 7</td>
-      <td>Jon Rahm +4
-+2 thru 13</td>
-      <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
@@ -620,16 +604,32 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Santorini Sunrises</td>
+      <td class="bigbold">1</td>
+      <td>Cameron Smith -3
+-1 thru 7</td>
+      <td>Corey Conners(W) -1
+E thru 7</td>
+      <td>Will Zalatoris E
++1 thru 7</td>
+      <td>Jon Rahm +5
++3 thru 14</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">1</td>
       <td>Scottie Scheffler -9
 -1 thru 4</td>
       <td>Rory McIlroy +2
 E thru 14</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td>Jon Rahm(W) +4
-+2 thru 13</td>
+      <td>Jon Rahm(W) +5
++3 thru 14</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -669,15 +669,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Brian McDonald</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">4</td>
       <td>Justin Thomas -2
 -1 thru 9</td>
       <td>Corey Conners -1
 E thru 7</td>
       <td>Rory McIlroy +2
 E thru 14</td>
-      <td>Jon Rahm(W) +4
-+2 thru 13</td>
+      <td>Jon Rahm(W) +5
++3 thru 14</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -685,13 +685,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Don Shaw</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">6</td>
       <td>Cameron Smith -3
 -1 thru 7</td>
       <td>Corey Conners -1
 E thru 7</td>
-      <td>Jon Rahm(W) +4
-+2 thru 13</td>
+      <td>Jon Rahm(W) +5
++3 thru 14</td>
       <td>Tiger Woods +5
 +4 thru 11</td>
       <td class="greyout leftborder">Sam Burns
@@ -701,15 +701,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">6</td>
       <td>Justin Thomas(W) -2
 -1 thru 9</td>
       <td>Will Zalatoris E
 +1 thru 7</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td>Jon Rahm +4
-+2 thru 13</td>
+      <td>Jon Rahm +5
++3 thru 14</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -717,49 +717,17 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">6</td>
       <td>Justin Thomas -2
 -1 thru 9</td>
       <td>Will Zalatoris E
 +1 thru 7</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td>Jon Rahm(W) +4
-+2 thru 13</td>
+      <td>Jon Rahm(W) +5
++3 thru 14</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">6</td>
-      <td>Justin Thomas -2
--1 thru 9</td>
-      <td>Hideki Matsuyama E
-+3 thru 5</td>
-      <td>Jon Rahm(W) +4
-+2 thru 13</td>
-      <td>Patrick Cantlay +4
-+3 thru 10</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">6</td>
-      <td>Cameron Smith -3
--1 thru 7</td>
-      <td>Rory McIlroy +2
-E thru 14</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td>Jon Rahm(W) +4
-+2 thru 13</td>
-      <td class="greyout leftborder">Bubba Watson +5
-+3 thru 13</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -774,8 +742,8 @@ Missed Cut</td>
 -1 (F)</td>
       <td>Patrick Cantlay +4
 +3 thru 10</td>
-      <td class="greyout leftborder">Jon Rahm +4
-+2 thru 13</td>
+      <td class="greyout leftborder">Jon Rahm +5
++3 thru 14</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -790,8 +758,8 @@ E thru 14</td>
 -1 (F)</td>
       <td>Patrick Cantlay +4
 +3 thru 10</td>
-      <td class="greyout leftborder">Jon Rahm +4
-+2 thru 13</td>
+      <td class="greyout leftborder">Jon Rahm +5
++3 thru 14</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -812,16 +780,48 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Roy Jeffrey A</td>
+      <td class="bigbold">7</td>
+      <td>Justin Thomas -2
+-1 thru 9</td>
+      <td>Hideki Matsuyama E
++3 thru 5</td>
+      <td>Patrick Cantlay +4
++3 thru 10</td>
+      <td>Jon Rahm(W) +5
++3 thru 14</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Glitter Girl</td>
+      <td class="bigbold">7</td>
+      <td>Cameron Smith -3
+-1 thru 7</td>
+      <td>Rory McIlroy +2
+E thru 14</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td>Jon Rahm(W) +5
++3 thru 14</td>
+      <td class="greyout leftborder">Bubba Watson +5
++3 thru 13</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">9</td>
       <td>Collin Morikawa(W) E
 +1 thru 7</td>
       <td>Hideki Matsuyama E
 +3 thru 5</td>
       <td>Patrick Cantlay +4
 +3 thru 10</td>
-      <td>Jon Rahm +4
-+2 thru 13</td>
+      <td>Jon Rahm +5
++3 thru 14</td>
       <td class="greyout leftborder">Paul Casey
 Out With Injury</td>
       <td class="greyout">Jordan Spieth
@@ -829,15 +829,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">9</td>
       <td>Justin Thomas -2
 -1 thru 9</td>
       <td>Rory McIlroy +2
 E thru 14</td>
       <td>Patrick Cantlay(W) +4
 +3 thru 10</td>
-      <td>Jon Rahm +4
-+2 thru 13</td>
+      <td>Jon Rahm +5
++3 thru 14</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -845,15 +845,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">9</td>
+      <td class="bigbold">10</td>
       <td>Justin Thomas(W) -2
 -1 thru 9</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Patrick Cantlay +4
 +3 thru 10</td>
-      <td>Jon Rahm +4
-+2 thru 13</td>
+      <td>Jon Rahm +5
++3 thru 14</td>
       <td class="greyout leftborder">Daniel Berger +6
 +4 thru 16</td>
       <td class="greyout">Xander Schauffele
@@ -861,13 +861,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">9</td>
+      <td class="bigbold">10</td>
       <td>Corey Conners(W) -1
 E thru 7</td>
       <td>Collin Morikawa E
 +1 thru 7</td>
-      <td>Jon Rahm +4
-+2 thru 13</td>
+      <td>Jon Rahm +5
++3 thru 14</td>
       <td>Daniel Berger +6
 +4 thru 16</td>
       <td class="greyout leftborder">Robert MacIntyre +6
@@ -877,15 +877,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">11</td>
+      <td class="bigbold">12</td>
       <td>Collin Morikawa E
 +1 thru 7</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
-      <td>Jon Rahm +4
-+2 thru 13</td>
       <td>Patrick Reed +4
 +1 (F)</td>
+      <td>Jon Rahm +5
++3 thru 14</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -893,15 +893,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">11</td>
+      <td class="bigbold">12</td>
       <td>Dustin Johnson -2
 E thru 6</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Patrick Cantlay +4
 +3 thru 10</td>
-      <td>Jon Rahm +4
-+2 thru 13</td>
+      <td>Jon Rahm +5
++3 thru 14</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
@@ -909,15 +909,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">12</td>
+      <td class="bigbold">13</td>
       <td>Collin Morikawa E
 +1 thru 7</td>
-      <td>Jon Rahm(W) +4
-+2 thru 13</td>
       <td>Patrick Cantlay +4
 +3 thru 10</td>
       <td>Tony Finau +4
 +2 thru 17</td>
+      <td>Jon Rahm(W) +5
++3 thru 14</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
